[package]
name = "algorithm-project"
authors = ["Oliver Ladores <oliver.ladores@wvsu.edu.ph>"]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = [ "derive" ] }
strsim = "0.11"
ordered-float = { version = "4.0", default-features = false }
